--- a/firebase.json
+++ b/firebase.json
@@ -4,5 +4,13 @@
       "npm --prefix \"$RESOURCE_DIR\" run lint",
       "npm --prefix \"$RESOURCE_DIR\" run build"
     ]
+  },
+  "hosting": {
+    "public": "build",
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+    "rewrites": [
+      { "source": "/images/**", "function": "dynamicImages" },
+      { "source": "**", "destination": "/index.html" }
+    ]
   }
 }
