--- a/functions/package.json
+++ b/functions/package.json
@@ -15,9 +15,11 @@
   "main": "lib/index.js",
   "dependencies": {
     "firebase-admin": "^9.8.0",
-    "firebase-functions": "^3.14.1"
+    "firebase-functions": "^3.14.1",
+    "sharp": "^0.29.3"
   },
   "devDependencies": {
+    "@types/sharp": "^0.29.4",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.8.0",
     "eslint": "^7.6.0",
